# nonogram-solver

./: CMakeLists.txt  solver.cpp  solver.hpp  solverRunner.cpp  solverTest.cpp
cmake/: gtest.cmake
